K8s/juice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: juice
  template:
    metadata:
      labels:
        app: juice
    spec:
      containers:
        - name: juice-container
          image: bkimminich/juice-shop
          ports:
            - containerPort: 3000
