K8s/juice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-service
spec:
  selector:
    app: juice
  ports:
    - port: 3000
      targetPort: 3000
