K8s/juice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: juicesh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: juice-service
            port:
              number: 3000
